# mini-cheetah-tmotor-can

./: CMakeLists.txt  README.md  mini_cheetah_motor_driver-config.cmake  mini_cheetah_motor_driver.pc.in  package.xml  requirements.md
include/motor_driver/: CANInterface.hpp  MotorDriver.hpp  Parameters.hpp
socketcan_example/: README.md  canfilter.c  canreceive.c  canreceive2.c  cantransmit.c
src/: CANInterface.cpp  CANInterfaceTest.cpp  MotorDriver.cpp  MotorDriverTest.cpp  MotorDriverTrajTest.cpp
